--- a/index.html
+++ b/index.html
@@ -36,25 +36,24 @@
     <!-- end custom head snippets -->
 
 </head>
-
-  <body>
-    <header style="background-color: #FF69B4">
-      <div class="inner" style="padding: 70px">
-       
+    <body>
+    <header style="background-color: #FF69B4; padding: 40px">
+      <div class="inner" >
     <h1>My website for shit talking guilty pleasure TV shows</h1>
     <h2 style="text-align: center; color:white">By Aditi</h2>
-      </div>
+      <!-- </div> -->
 
     </header>
 
+    
 
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">  
-     	</section>
-	 </div>
-	</div>
+      <div id="content-wrapper">
+        <div class="inner clearfix">
+          <section id="main-content">  
+       	</section>
+  	 </div>
+  	</div>
 
-</body>
+    </body>
 
 </html>
