--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <meta property="twitter:title" content="Welcome to GitHub Pages">
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"WebSite","headline":"Welcome to GitHub Pages","name":"mywebsite","url":"https://aditin97.github.io/mywebsite/"}</script>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <!-- End Jekyll SEO tag -->
 
 
@@ -42,17 +45,23 @@
     <h1>My website for shit talking guilty pleasure TV shows</h1>
     <h2 style="text-align: center; color:white">By Aditi</h2>
       <!-- </div> -->
-
     </header>
 
-    
+    <div class="row">
 
-      <div id="content-wrapper">
-        <div class="inner clearfix">
-          <section id="main-content">  
-       	</section>
-  	 </div>
-  	</div>
+      <div class="column1">
+      <h2>Column 1</h2>
+      <p>Some text..</p>
+      </div>
+
+      <div class="column2">
+      <h2>About Me</h2>
+      <img src="self.png" class="center">
+      <p>I love watching TV shows. TV shows are the perfect form of escapism for me. My job, my boss, the stock market, the toxic society of the tech world… they all cause a lot of stress in my life. And in the nights after work, I like to unwind with a good tv show. For particularly thought provoking shows or sometimes reality shows, I like to read think pieces or recent drama about the actors. I figured why not just post my own thoughts? </p>
+      </div>
+
+    </div>
+
 
     </body>
 
