--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     <div class="row">
 
       <div class="column1">
-      <h2>Column 1</h2>
+      <h2 class="widget-title" style="background: #FF69B4; color: #f7f7f7">Recent Posts</h2>
       <p>Some text..</p>
       </div>
 
       <div class="column2">
-      <h2>About Me</h2>
+      <h2 class="widget-title" style="background: #FF69B4; color: #f7f7f7">About Me</h2>
       <img src="self.png" class="center">
       <p>I love watching TV shows. TV shows are the perfect form of escapism for me. My job, my boss, the stock market, the toxic society of the tech world… they all cause a lot of stress in my life. And in the nights after work, I like to unwind with a good tv show. For particularly thought provoking shows or sometimes reality shows, I like to read think pieces or recent drama about the actors. I figured why not just post my own thoughts? </p>
       </div>
