--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
                 <div class="col-lg-5">
                     <h1 class="font-weight-light">Trader Joes Hoes</h1>
-                    <p>I am passionate about two things - Trader Joes products and the things you can cook with them. </p>
-                    <a class="btn btn-primary" href="#!">Call to Action!</a>
+                    <p>I am passionate about two things - Trader Joes products and the things you can cook with them. I'm creating this blog to talk about some of the amazing and not so amazing things I've tried there as at tribute to my love for the store.</p>
+                    <a class="btn btn-primary" href="#!">Read more</a>
                 </div>
             </div>
             <!-- Call to Action-->
@@ -61,28 +61,31 @@
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h2 class="card-title">Card One</h2>
+                            <h2 class="card-title">Soyrizo</h2>
+                            <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/1800x1000/dee2e6/6c757d.jpg" alt="..." /></div>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                         </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Read More</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h2 class="card-title">Card Two</h2>
+                            <h2 class="card-title">Goat Cheese</h2>
+                            <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/1800x1000/dee2e6/6c757d.jpg" alt="..." /></div>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
                         </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Read More</a></div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-5">
                     <div class="card h-100">
                         <div class="card-body">
-                            <h2 class="card-title">Card Three</h2>
+                            <h2 class="card-title">Watermelon Jerky</h2>
+                            <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/1800x1000/dee2e6/6c757d.jpg" alt="..." /></div>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                         </div>
-                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                        <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">Read More</a></div>
                     </div>
                 </div>
             </div>
